Add classes to home.html & text

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,1 +1,3 @@
-<%= image_tag('parici.jpg', class: "cover_image")%>
+<%= image_tag('parici.jpg', class: "cover_center animate-fadeinout")%>
+
+<h1 class="coming_soon animate-onoff">Coming Soon</h1>
