--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,13 +6,15 @@ body{
     background: black;
 }
 
-.cover_image {
-    width:500px;
-    height:500px;
+.cover_center {
+    width: 500px;
+    height: 500px;
     margin: 0 auto;
     position: absolute;
-    left:50%;
-    top:50%;
-    margin-left:-250px;
-    margin-top:-250px;
+    left: 50%;
+    top: 50%;
+    margin-left: -250px;
+    margin-top: -250px;
+    opacity: 1;
 }
+
