Add css for coming soon text

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,12 @@ body{
     opacity: 1;
 }
 
+.coming_soon{
+    font-family: 'Italianno', cursive;
+    font-size: 6em; 
+    color: white;
+    text-align: center;
+    top: 50%;
+    
+}
+
