Temporarily add google font api call to home.html

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,3 +1,4 @@
 <%= image_tag('parici.jpg', class: "cover_center animate-fadeinout")%>
 
+<link rel ="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Italianno">
 <h1 class="coming_soon animate-onoff">Coming Soon</h1>
