Add class to copyright to attach css to it

--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -1,4 +1,4 @@
-<p>
+<p class="copyright">
   <%= t('.copyright', :year => Time.now.year,
                       :site_name => Refinery::Core.site_name) %>
 </p>
