--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -77,3 +77,37 @@ body{
     animation: fadeinout 3s ease-in-out;
 }
 
+/* Looping On and Off Flicker */
+@-o-keyframes flickerAnimation {
+    0% { opacity: 0; }
+    20% { opacity: 0; }
+    90% { opacity: 1; }
+    100% { opacity: 1 }
+    
+}
+@-moz-keyframes flickerAnimation {
+    0% { opacity: 0; }
+    20% { opacity: 0; }
+    90% { opacity: 1; }
+    100% { opacity: 1 }
+}
+@-webkit-keyframes flickerAnimation {
+    0% { opacity: 0; }
+    20% { opacity: 0; }
+    90% { opacity: 1; }
+    100% { opacity: 1 }
+}
+
+@keyframes flickerAnimation {
+    0% { opacity: 0; }
+    20% { opacity: 0; }
+    90% { opacity: 1; }
+    100% { opacity: 1 }
+}
+.animate-onoff {
+    -webkit-animation: flickerAnimation 3s ease-in-out;
+    -moz-animation: flickerAnimation 3s ease-in-out;
+    -o-animation: flickerAnimation 3s ease-in-out;
+    animation: flickerAnimation 3s ease-in-out;
+}
+
