--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,4 +1,3 @@
-<%= image_tag('parici.jpg', class: "cover_center animate-fadeinout")%>
-
-<link rel ="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Italianno">
-<h1 class="coming_soon animate-onoff">Coming Soon</h1>
+<header id="header">
+  <%= render "/refinery/header"%>
+</header>
