--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -1,1 +1,20 @@
+<div id="home-header">
+  <nav class="navbar navbar-default navbar-static-top" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a href="/"><%= image_tag(("parici.jpg"), :class => "logo")%></a>
+      </div>
+      <!-- Collect the nav links, forms and other content for toggling -->
+      <div class="collapse navbar-collapse nav-menu" id="navbar-collapse-1">
+        <%= Refinery::Pages::MenuPresenter.new(refinery_menu_pages, self).to_html %>
+      </div>
+    </div>
+  </nav>
+</div>
 
