--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <head>
     <%= render "/refinery/head" %>
     <%= render "/refinery/javascripts" %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body id="<%= canonical_id @page %>">
     <%= site_bar -%>
