Align Hamburger with logo h-midline

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -211,6 +211,11 @@ $text-col:#555;
             }
         }  
 
+//HAMBURGER NAVIGATION
+.navbar-toggle {
+    margin-top: 80px;
+}
+
 //HOVER EFFECT
 
 .navbar-default .navbar-nav > li > a {
