--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -145,58 +145,61 @@ $text-col:#555;
         padding-left:10px;
         width: 200px;
         height: auto;
+        
+    }
+    
+    .nav-menu {
+        padding-right:85px;
+        
+        .enquiry {
+            color:#fff;
+            display:block;
+            font-family:playfair display;
+            font-size:1.4em;
+            font-style:italic;
+            padding-right:10px;
+
+            a {
+                font-family:Open Sans;
+                color:#fff;
+                font-style:normal;
+                font-weight:bold;
+                padding-left:10px;
             }
-     
-            .nav-menu {
-                padding-right:85px;
-                        
-                .enquiry {
-                    color:#fff;
-                    display:block;
-                    font-family:playfair display;
-                    font-size:1.4em;
-                    font-style:italic;
-                    padding-right:10px;
+        }
+        
+        .navbar-right {
+            margin-right: 0px;
+            clear:right;
+        }
+        
+        .navbar-nav {
+            
+            margin: 80px 0 0 20px;
+            
+            li {
+                a{font-family:open sans;
+                  color:#fff;
+                  font-size:0.9em;
+                  padding:5px 0px;
+                  margin:0 10px;
+                  letter-spacing:0.5px;                                
+                  
 
-                    a {
-                        font-family:Open Sans;
-                        color:#fff;
-                        font-style:normal;
-                        font-weight:bold;
-                        padding-left:10px;
-                    }
-                }
+                  &:hover { }
+                 }
+            }
+            
+            .active {
                 
-                .navbar-right {
-                    margin-right: 0px;
-                    clear:right;
-                }
-                
-                .navbar-nav {
-
-                    li {
-                        a{font-family:open sans;
-                          color:#fff;
-                          font-size:0.9em;
-                          padding:5px 0px;
-                          margin:0 10px;
-                          letter-spacing:0.5px;                                
-                          
-
-                          &:hover { }
-                         }
-                    }
+                a {
+                    background:transparent;
                     
-                    .active {
-                        
-                        a {
-                            background:transparent;
-                            
-                        }
-                    }
                 }
             }
-        }  
+        }
+    }
+}
 
 //HAMBURGER NAVIGATION
 .navbar-toggle {
